cynic/tests/snapshots/mutation_generics__query_building.snap
---
source: cynic/tests/mutation_generics.rs
assertion_line: 40
expression: operation.query
---
mutation($input: SignInInput!) {
  signIn(input: $input)
}


