cynic/tests/snapshots/mutation_generics__query_building_more_generic.snap
---
source: cynic/tests/mutation_generics.rs
expression: operation.query
---
mutation SignInMoreGeneric($input: SignInInput!) {
  signIn(input: $input)
}


