cynic/tests/snapshots/mutation_generics__query_building_nested_generic_in_vec.snap
---
source: cynic/tests/mutation_generics.rs
expression: operation.query
---
mutation SendManyBaz($manyBaz: [Baz!]!) {
  sendManyBaz(many_baz: $manyBaz)
}

